syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.omgcodes.bikelookup";
option java_outer_classname = "BikeLookupProto";

package bike_lookup;

service BikeLookup {
  // Sends a greeting
  rpc Lookup (BikeLookupRequest) returns (BikeLookupReply) {}
}

// The request message containing the user's name.
message BikeLookupRequest {
  string suburb = 1;
  int32 min_capacity = 2;
}

// The response message containing the greetings
message BikeLookupReply {
  repeated BikeRack bike_rack = 1;
  int64 timestamp = 2;
  int64 totalCpuTime = 3;
}

message BikeRack {
  string suburb = 1;
  string address = 2;
  int32 capacity = 3;
  Point position = 4;
}

message Point {
  double latitude = 1;
  double longitude = 2;
}